--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body, html {
   color: #777;
 }
 /* CSS FOR THE NAV BAR inside the navbar */
-body{
-	
+html{
+	 box-sizing: border-box;
 }
 
 .main {
@@ -20,8 +20,12 @@ body{
   overflow: hidden;
   background-color: #333;
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
+}
+.heading{
+	 width: 100%;
+	   z-index: 99;
 }
 
 .navbar a {
@@ -40,19 +44,21 @@ body{
 .bg { 
     /* The image used */
     background-image: url("images/happy.jpg");
-
     /* Full height */
     height: 100%; 
-
-
+    /* Grey Scale */
+     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 .bg:hover{
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+	/* Grey Scale */
+	    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+   
 }
 .caption {
   position: absolute;
@@ -63,19 +69,63 @@ body{
   width: 100%;
   text-align: center;
   color: #000;
+
+}
+.heading {
+ 
+  left: 0;
+  top: 50%;
+  font-size: 25px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  width: 100%;
+  text-align: center;
+  color: #000;
+
+  background-color: grey;
+  color: orange;
+  padding: 15px;
+  top: 15%;
+  letter-spacing: 10px;
+
 }
 
 .caption span.border {
   background-color: grey;
   color: #fff;
   padding: 15px;
+  top: 15%;
   letter-spacing: 10px;
 }
+
+@media (max-width: 650px) {
+  .caption{
+    font-size: 15px;
+  }
+  .caption span.border {
+  	 padding: 10px;
+  }
+   #scrolldown {
+  	   padding: 15px;
+  }
+}
+@media (max-width: 300px) {
+  .caption{
+    font-size: 10px;
+  }
+  .caption span.border {
+  	 padding: 5px;
+  }
+  #scrolldown {
+  	   padding: 10px;
+  }
+}
 #scrolldown {
-    /* Hidden by default */
+    /
     position: absolute; /* Fixed/sticky position */
     /* Place the button at the bottom of the page */
-    font-size: 30px;
+    font-size: 50px;
+    width: 100px;
     /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
@@ -83,7 +133,54 @@ body{
     background-color: red; /* Set a background color */
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
+    padding: 20px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
 }
 
+/**-----------------------------------------The WHO AM I----------------------------*/
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+
+}
+.mainbox{
+	background: white;
+}
+
+@media (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+.card {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 5px #aaaaaa;
+  background: white;
+
+}
+
+.container {
+  padding: 0 16px;
+  color: black;
+
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+   
+}
+
+.title {
+  color: orange;
+  font-weight: bold;
+}
