--- a/index.css
+++ b/index.css
@@ -68,8 +68,8 @@ html{
     height: 100%; 
 
     /* Grey Scale */
-     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+     -webkit-filter: grayscale(90%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(90%);
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -205,4 +205,8 @@ html{
 .title {
   color: orange;
   font-weight: bold;
+}
+/*--------------------------------------THE WORDED PARTICLES--------------------*/
+#scene{
+	background: black;
 }
