--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ html{
 
 .card {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 10px 10px 5px #aaaaaa;
+    box-shadow: 10px 10px 5px grey;
   background: white;
 
 }
