--- a/index.css
+++ b/index.css
@@ -182,6 +182,72 @@ html{
   letter-spacing: 10px;
 }
 
+ /* -----------------------------------------ANIMATING THE DOWN SCROLL------------------------*/
+ .demo a {
+  
+  
+  left: 50%;
+  bottom: -10%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: white;
+  font-size: 50px;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo a:hover {
+  opacity: .5;
+}
+
+#scrolldown {
+    
+    position: absolute;
+  
+  left: 50%;
+  color:white;
+  width: 60px;
+  height: 60px;
+  margin-left: -12px;
+  border-left: 15px solid #fff;
+  border-bottom: 15px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb 2s infinite;
+  animation: sdb 2s infinite;
+  box-sizing: border-box;
+
+}
+@-webkit-keyframes sdb {
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+  }
+  20% {
+    -webkit-transform: rotate(-45deg) translate(-10px, 10px);
+  }
+  40% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+  }
+}
+@keyframes sdb {
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0.3;
+  }
+  20% {
+    transform: rotate(-45deg) translate(-10px, 10px);
+    opacity: 0.6;
+  }
+  40% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0.9;
+    color: orange;
+  }
+}
+
 @media (max-width: 650px) {
   .caption{
     font-size: 15px;
@@ -191,6 +257,7 @@ html{
   }
    #scrolldown {
   	   padding: 15px;
+       font-weight: 30px;
   }
 }
 @media (max-width: 300px) {
@@ -202,24 +269,10 @@ html{
   }
   #scrolldown {
   	   padding: 10px;
+         font-weight: 24px;
   }
 }
-#scrolldown {
-    /
-    position: absolute; /* Fixed/sticky position */
-    /* Place the button at the bottom of the page */
-    font-size: 50px;
-    width: 100px;
-    /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: red; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 20px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-}
+
 
 /**-----------------------------------------The WHO AM I----------------------------*/
 *, *:before, *:after {
