--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body, html {
   height: 100%;
-  margin: 2;
+  
   font: 400 15px/1.8 "Lato", sans-serif;
    margin: 0;
   color: #777;
@@ -12,10 +12,9 @@ body {
  
   margin: 0 auto;
   text-align: center;
-  margin-top: 50px;
-  color: #FFF;
+  
   text-shadow: -1px -1px #333;
-  background: #333;
+  background: black;
 }
 body h1 {
   font-weight: normal;
@@ -74,16 +73,97 @@ body .reset:hover {
 html{
 	 box-sizing: border-box;
 }
+.menuIcon2{
+  opacity: 0.9;
+  border: none;
+  font-size: 30px;
+   display: none;
+   position: fixed;
+   color: white;
+    top: 0;
+  z-index: 3;
+   left: 2%;
+   font-family: 'Emblema One';
+   padding: 15px;
+   padding-top: 8px;
+    text-align: center;
+   text-decoration: none;
+   background: black;
+    height:10%;
+   animation-name: slideIn;
+    -webkit-animation-name: slideIn;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+     
+}
 
+.menuIcon2:hover{color: orange}
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+ background: black;
   position: fixed;
   top: 0;
+  z-index: 3;
   width: 100%;
   height:10%;
+   animation-name: slideIn;
+    -webkit-animation-name: slideIn;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    animation-direction: alternate;
+    visibility: visible;
 
+}
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+         font-size: 5px;
+        -webkit-transform: translateX(-70%);
+    } 
+    100% {
+        opacity: 1;
+         font-size: 25px;
+        -webkit-transform: translateX(0%);
+    }
+}
+
+@-webkit-keyframes slideIn {
+    0% {
+        opacity: 0;
+         font-size: 5px;
+        -webkit-transform: translateX(-70%);
+    } 
+    100% {
+        opacity: 1;
+         font-size: 25px;
+        -webkit-transform: translateX(0%);
+    }
+}
+@keyframes slideOut {
+    0% {
+        opacity: 0;
+         font-size: 5px;
+        -webkit-transform: translateX(70%);
+    } 
+    100% {
+        opacity: 1;
+         font-size: 25px;
+        -webkit-transform: translateX(0%);
+    }
+}
+
+@-webkit-keyframes slideOut {
+    0% {
+        opacity: 0;
+         font-size: 5px;
+        -webkit-transform: translateX(70%);
+    } 
+    100% {
+        opacity: 1;
+         font-size: 25px;
+        -webkit-transform: translateX(0%);
+    }
 }
 .heading{
 	 width: 100%;
