--- a/index.css
+++ b/index.css
@@ -18,12 +18,15 @@ body {
 }
 body h1 {
   font-weight: normal;
+  color: white;
 }
 body .turn {
   margin-bottom: 10px;
 }
 body table {
   border-collapse: collapse;
+  border-width:5px;  
+     border-style:outset;
   width: 300px;
   height: 300px;
   margin: 0 auto;
@@ -33,6 +36,7 @@ body table td {
   height: 50px;
   border: 1px solid #555;
   cursor: pointer;
+
 }
 body table td:before {
   font-size: 30px;
@@ -50,7 +54,7 @@ body .reset {
   background: #555;
   border: 1px solid #333;
   padding: 5px 10px;
-  color: #FFF;
+  color: white;
   cursor: pointer;
   
   text-transform: uppercase;
