--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body, html {
    margin: 0;
   color: #777;
   font-family: 'Emblema One';
+  font-weight: bold;
 }
 
 /*---------------------------------------TIC TAC TOE GAME-------------------------------*/
@@ -43,11 +44,11 @@ body table td:before {
   line-height: 2;
 }
 body table td.cross:before {
-  content: "x";
+  content: "X";
   color: orange;
 }
 body table td.circle:before {
-  content: "o";
+ content: 'O';
   color: white;
 }
 body .reset {
@@ -62,16 +63,6 @@ body .reset {
 body .reset:hover {
   opacity: 0.8;
 }
-
-
-
-
-
-
-
-
-
-
 
 /*----------------------------------------- CSS FOR THE NAV BAR inside the navbar */
 html{
@@ -88,6 +79,7 @@ html{
   z-index: 3;
    left: 2%;
    font-family: 'Emblema One';
+ 
    padding: 15px;
    padding-top: 8px;
     text-align: center;
@@ -102,10 +94,35 @@ html{
 }
 
 .menuIcon2:hover{color: orange}
+.infoIcon{
+    opacity: 0.9;
+  border: none;
+  font-size: 30px;
+
+   display: none;
+   position: fixed;
+   color: white;
+    top: 0;
+   z-index: 1;
+   right: 2%;
+   font-family: 'Emblema One';
+   padding: 15px;
+   padding-top: 8px;
+    text-align: center;
+   text-decoration: none;
+  
+    height:10%;
+   animation-name: slideOut;
+    -webkit-animation-name: slideOut;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+}
+.infoIcon:hover{color:red;}
 
 .navbar {
   overflow: hidden;
- background: black;
+  background: black;
+   opacity: 0.76;
   position: fixed;
   top: 0;
   z-index: 3;
@@ -117,6 +134,11 @@ html{
     -webkit-animation-duration: 1s;
     animation-direction: alternate;
     visibility: visible;
+
+}
+.projects{
+  font-size: 50px;
+
 
 }
 @keyframes slideIn {
@@ -176,21 +198,23 @@ html{
 .socials{
 	float:right;
 
-	
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  opacity: 1;
 
 }
 .social{
 	padding-left: 10px;
 	width:50px;
 	 height: 40px;
+   font-size: 36px;
 	 border-radius: 50%;
+   
 	 
-}
-.social:hover {
-	height: 50px;
-	width:60px;
-	/*filter:drop-shadow(8px 8px 10px orange);*/
-	
 }
 
 .navbar a {
@@ -201,6 +225,7 @@ html{
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  opacity: 1;
 }
 
 .navbar :hover{
@@ -365,7 +390,7 @@ html{
 
 .column {
   float: left;
-  width: 25%;
+  width: 20%;
   margin-bottom: 16px;
   padding: 0 8px;
 
@@ -405,6 +430,46 @@ html{
 .title {
   color: orange;
   font-weight: bold;
+}
+/*--------------------------------------------------------------------------*/
+
+.a1,.a2,.a3,.a4,.a5,.a6 {
+  display:block;
+  height: 20%;
+  width:20%;
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  animation: wave 2s linear infinite;
+}
+.a1 {
+  animation-delay: 0s;
+}
+.a2 {
+  animation-delay: 0.2s;
+}
+.a3 {
+  animation-delay: 0.4s;
+}
+.a4 {
+  animation-delay: 0.6s;
+}
+.a5 {
+  animation-delay: 0.8s;
+}
+.a6 {
+  animation-delay: 1s;
+}
+@keyframes wave {
+  0%, 50%{
+   -webkit-transform: translateX(0%);
+  }
+  25% {
+    
+  -webkit-transform: translateX(70%);
+   
+    
+  }
 }
 /*--------------------------------------THE WORDED PARTICLES--------------------*/
 #scene{
