I added the template for the projects that I have worked on

--- a/index.css
+++ b/index.css
@@ -584,21 +584,78 @@ input[type="submit"] {
 
   }
 /******* THE WHAT I DO COLOMN*******************/
-.project-container{
-width: 100%;
-height: 15%;
-background-color: snow;
-display: block;
+.column {
+  
+  width: 27%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+  font-size: 12px;
+  float: left;
+  display: inline-block;
 
 }
-.project-image{
-text-align:left;
-height: 60%;
-width: 20%;
-float: left;
+.mainbox{
+  background: white;
+  display: inline-block;
 }
-.project-tittle{
-  font-size: 20px;
-  color: black;
 
+@media (max-width: 650px) {
+  .column {
+    width: 85%;
+
+    display: block;
+  }
+}
+
+.card-do {
+  border-top-color: green;
+  background: white;
+
+}
+.card-do:hover{
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 5px grey;
+    background-color: #D3D3D3;
+
+}
+
+.container-do {
+  padding: 0 16px;
+  color: gray;
+   
+
+}
+
+.container-do::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+   
+}
+
+.title-do {
+  color: orange;
+  font-size: 15px;
+  font-weight: bold;
+}
+.button-do {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  
+  text-align: center;
+  cursor: pointer;
+  width: 80%;
+}
+
+.button-do:hover {
+  background-color: red;
+}
+.project-description{
+  color: black; 
+  font-size: 14px;
+  text-decoration: none;
+  
 }
